# AurumTeam

./: README.md
BOOME/: BoomeInterprete.py  anlex.py  codigo.boome  prueba.boome  saltos.boome  vm.py
BoomBay/: BoomeBay.py
CABALLO1/: bronco.py
CABALLO2/: bronco2.py
Class_Prob/: evaluador.py  pyproject.toml  tokens.yaml
PATHFINDING/: speedrun.py  tablero.json
REINAS/: primadonna.py
arbolitos/: arbolito.json  busqueda_local.py  pruebas.py  repl_example.py  test_trepador.py  trepador.py
figuras/: adivinador.py  figuras.json
red-semantica-animales/: .gitignore  pyproject.toml
