[project]
name = "class-prob"
version = "0.1.0"
description = ""
authors = [
    {name = "DAYN131",email = "mtzhdaniel@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "ruamel-yaml (>=0.19.1,<0.20.0)",
    "spacy (>=3.8.11,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
